--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ultimate-jekyll-manager",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "Ultimate Jekyll dependency manager",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "prepare": "node -e \"require('prepare-package')()\"",
     "prepare:watch": "nodemon -w ./src -e '*' --exec 'npm run prepare'"
@@ -18,8 +18,9 @@
   },
   "projectScripts": {
     "preinstall": "bundle install && bundle update",
-    "start": "bundle exec gulp --cwd ./ --gulpfile ./node_modules/ultimate-jekyll-manager/dist/gulp/main.js",
-    "build": "bundle exec gulp build"
+    "gulp": "gulp --cwd ./ --gulpfile ./node_modules/ultimate-jekyll-manager/dist/gulp/main.js",
+    "start": "bundle exec npm run gulp",
+    "build": "UJ_BUILD_MODE=true bundle exec npm run gulp -- build"
   },
   "engines": {
     "node": "20"
@@ -53,16 +54,17 @@
     "@babel/preset-env": "^7.26.7",
     "babel-loader": "^9.2.1",
     "browser-sync": "^3.0.3",
+    "chalk": "^4.1.2",
     "fs-jetpack": "^5.1.0",
     "glob": "^11.0.1",
     "gulp-clean-css": "^4.3.0",
+    "gulp-responsive-modern": "^1.0.0",
     "gulp-sass": "^6.0.0",
     "itwcw-package-analytics": "^1.0.6",
     "lodash": "^4.17.21",
     "node-powertools": "^2.1.2",
     "npm-api": "^1.0.1",
     "sass": "^1.83.4",
-    "sharp": "^0.33.5",
     "webpack": "^5.97.1",
     "wonderful-fetch": "^1.3.0",
     "wonderful-version": "^1.2.0",
