New watchers & logs

--- a/package.json
+++ b/package.json
@@ -61,12 +61,14 @@
     "gulp-responsive-modern": "^1.0.0",
     "gulp-sass": "^6.0.0",
     "itwcw-package-analytics": "^1.0.6",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
-    "node-powertools": "^2.1.2",
+    "node-powertools": "^2.1.4",
     "npm-api": "^1.0.1",
     "sass": "^1.83.4",
+    "web-manager": "^3.2.73",
     "webpack": "^5.97.1",
-    "wonderful-fetch": "^1.3.0",
+    "wonderful-fetch": "^1.3.1",
     "wonderful-version": "^1.2.0",
     "yargs": "^17.7.2"
   },
