--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "ultimate-jekyll-manager",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Ultimate Jekyll dependency manager",
   "main": "dist/index.js",
+  "exports": {
+    ".": "./dist/index.js",
+    "./build": "./dist/build.js",
+    "./service-worker": "./dist/service-worker.js"
+  },
   "scripts": {
     "prepare": "node -e \"require('prepare-package')()\"",
     "prepare:watch": "nodemon -w ./src -e '*' --exec 'npm run prepare'"
@@ -23,7 +28,9 @@
     "build": "UJ_BUILD_MODE=true bundle exec npm run gulp -- build"
   },
   "engines": {
-    "node": "20"
+    "node": "20",
+    "bundler": "2.4.21",
+    "ruby": "3.0.0"
   },
   "repository": {
     "type": "git",
@@ -62,13 +69,15 @@
     "gulp-sass": "^6.0.0",
     "itwcw-package-analytics": "^1.0.6",
     "js-yaml": "^4.1.0",
+    "json5": "^2.2.3",
     "lodash": "^4.17.21",
+    "minimatch": "^10.0.1",
     "node-powertools": "^2.1.4",
     "npm-api": "^1.0.1",
-    "sass": "^1.83.4",
+    "sass": "^1.84.0",
     "web-manager": "^3.2.73",
     "webpack": "^5.97.1",
-    "wonderful-fetch": "^1.3.1",
+    "wonderful-fetch": "^1.3.2",
     "wonderful-version": "^1.2.0",
     "yargs": "^17.7.2"
   },
