--- a/src/defaults/.github/workflows/build.yml
+++ b/src/defaults/.github/workflows/build.yml
@@ -17,6 +17,11 @@ concurrency:
 env:
   # GH_TOKEN: ${{ secrets.GH_TOKEN }}
   BACKEND_MANAGER_KEY: ${{ secrets.BACKEND_MANAGER_KEY }}
+  NODE_VERSION: '{nodeVersion}'
+  BUNDLER_VERSION: '{bundlerVersion}'
+  RUBY_VERSION: '{rubyVersion}'
+  UJ_BUILD_MODE: 'true'
+  UJ_IS_SERVER: 'true'
 
 jobs:
   build:
@@ -33,17 +38,17 @@ jobs:
       - name: Setup ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.0.0'
+          ruby-version: ${{ env.RUBY_VERSION }}
           bundler-cache: false
       - name: Install specific bundler version
-        run: gem install bundler -v 2.4.21
-      - name: Run bundle install
+        run: gem install bundler -v ${{ env.BUNDLER_VERSION }}
+      - name: Run bundle install # TODO: [DEPRECATED] MIGRATE TO: bundle config set --local path 'vendor/bundle'
         run: |
           bundle install --path vendor/bundle
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          node-version: 10
+          node-version: ${{ env.NODE_VERSION }}
       - name: Run node install
         run: npm install
       - name: Log dependency versions
@@ -65,23 +70,30 @@ jobs:
 
           echo "NPM Dependeny Versions: "
           npm list --depth=0 || echo ""
-      - name: Run node build
-        run: npm run build -- --buildLocation='server'
-      - name: Create build.json
+      - name: Fetch
+      - name: Log all files in repo
         run: |
-          export TZ=UTC date
-          timestamp=$(date +%FT%TZ)
-          temp_build_json=$(cat @output/build/build.json)
+          echo "All files in the repo: "
+          ls -R *
+      - name: Run node build
+        # run: npm run build -- --buildLocation='server'
+        run: |
+          UJ_BUILD_MODE=true UJ_IS_SERVER=true npx uj setup && npm run build
+      # - name: Create build.json
+      #   run: |
+      #     export TZ=UTC date
+      #     timestamp=$(date +%FT%TZ)
+      #     temp_build_json=$(cat @output/build/build.json)
 
-          echo account: $GITHUB_ACTOR
-          echo repo: $GITHUB_REPOSITORY
-          echo timestamp: $timestamp
-          echo build.json: $temp_build_json
+      #     echo account: $GITHUB_ACTOR
+      #     echo repo: $GITHUB_REPOSITORY
+      #     echo timestamp: $timestamp
+      #     echo build.json: $temp_build_json
 
-          build_log_path="@output/build/build.json"
-          sed "s/%GHP_TIMESTAMP%/$timestamp/g" $build_log_path > "$build_log_path"-temp && mv "$build_log_path"-temp $build_log_path
+      #     build_log_path="@output/build/build.json"
+      #     sed "s/%GHP_TIMESTAMP%/$timestamp/g" $build_log_path > "$build_log_path"-temp && mv "$build_log_path"-temp $build_log_path
 
-          sed -n '1h;1!H;${;g;s/GEN>>>.*<<<GEN/<REDACTED FOR LIVE PUBLISH>/g;p;}' .gitignore > .gitignore
+      #     sed -n '1h;1!H;${;g;s/GEN>>>.*<<<GEN/<REDACTED FOR LIVE PUBLISH>/g;p;}' .gitignore > .gitignore
       # - name: Delete gh-pages branch
       #   uses: dawidd6/action-delete-branch@v3
       #   with:
