--- a/src/defaults/.github/workflows/build.yml
+++ b/src/defaults/.github/workflows/build.yml
@@ -17,9 +17,9 @@ concurrency:
 env:
   # GH_TOKEN: ${{ secrets.GH_TOKEN }}
   BACKEND_MANAGER_KEY: ${{ secrets.BACKEND_MANAGER_KEY }}
-  NODE_VERSION: '{nodeVersion}'
-  BUNDLER_VERSION: '{bundlerVersion}'
   RUBY_VERSION: '{rubyVersion}'
+  BUNDLER_VERSION: '{bundlerVersion}'
+  NODE_VERSION: '{nodeVersion}'
   UJ_BUILD_MODE: 'true'
   UJ_IS_SERVER: 'true'
 
@@ -53,83 +53,54 @@ jobs:
         run: npm install
       - name: Log dependency versions
         run: |
-          echo "Unix Version: "
+          echo "🖥️ Unix Versions: "
           uname -a
+          echo -e "\n"
 
-          echo "Ubuntu Version: "
+          echo "🐧 Ubuntu Versions: "
           lsb_release -a
+          echo -e "\n"
 
+          echo "🔧 Framework Versions: "
           echo "Ruby: $(ruby -v)"
-          echo "Gem: $(gem -v)"
           echo "Bundler: $(bundle -v)"
+          echo "Gem: $(gem -v)"
           echo "Node: $(node -v)"
           echo "NPM: $(npm -v)"
+          echo "Ultimat Jekyll: $(npx uj version)"
+          echo -e "\n"
 
-          echo "Gem Versions: "
+          echo "💎 Gem Versions: "
           gem list
+          echo -e "\n"
 
-          echo "NPM Dependeny Versions: "
+          echo "📦 NPM Dependency Versions: "
           npm list --depth=0 || echo ""
-      - name: Fetch ensure-production-build.js
-        run: |
-          mkdir -p node_modules/ultimate-jekyll-manager
-          curl -L https://raw.githubusercontent.com/itw-creative-works/ultimate-jekyll-manager/refs/heads/master/src/ensure-production-build.js > node_modules/ultimate-jekyll-manager/ensure-production-build.js
+          echo -e "\n"
       - name: Log all files in repo
         run: |
           echo "All files in the repo: "
           ls -R *
       - name: Run node build
-        # run: npm run build -- --buildLocation='server'
         run: |
-          UJ_BUILD_MODE=true UJ_IS_SERVER=true node node_modules/ultimate-jekyll-manager/ensure-production-build.js && npx uj setup && npm run build
-      # - name: Create build.json
-      #   run: |
-      #     export TZ=UTC date
-      #     timestamp=$(date +%FT%TZ)
-      #     temp_build_json=$(cat @output/build/build.json)
-
-      #     echo account: $GITHUB_ACTOR
-      #     echo repo: $GITHUB_REPOSITORY
-      #     echo timestamp: $timestamp
-      #     echo build.json: $temp_build_json
-
-      #     build_log_path="@output/build/build.json"
-      #     sed "s/%GHP_TIMESTAMP%/$timestamp/g" $build_log_path > "$build_log_path"-temp && mv "$build_log_path"-temp $build_log_path
-
-      #     sed -n '1h;1!H;${;g;s/GEN>>>.*<<<GEN/<REDACTED FOR LIVE PUBLISH>/g;p;}' .gitignore > .gitignore
-      # - name: Delete gh-pages branch
-      #   uses: dawidd6/action-delete-branch@v3
-      #   with:
-      #     github_token: ${{ secrets.GH_TOKEN }}
-      #     branches: gh-pages
-      #     soft_fail: true
-      # - name: Delete gh-pages branch
-      #   continue-on-error: true
-      #   run: |
-      #     curl -L \
-      #       -X DELETE \
-      #       -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
-      #       https://api.github.com/repos/$GITHUB_REPOSITORY/git/refs/heads/gh-pages
+          UJ_BUILD_MODE=true UJ_IS_SERVER=true npx uj setup && npm run build
+      - name: Delete gh-pages branch
+        continue-on-error: true
+        run: |
+          curl -L \
+            -X DELETE \
+            -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
+            https://api.github.com/repos/$GITHUB_REPOSITORY/git/refs/heads/gh-pages
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GH_TOKEN }}
           publish_dir: ./_site
+          # enable_jekyll: true
       - name: Purge CloudFlare cache
-        run: npm run cloudflare:purge
+        run: npx uj cloudflare-purge
       - name: Purge artifacts
         uses: kolpav/purge-artifacts-action@v1
         with:
           token: ${{ secrets.GH_TOKEN }}
           expire-in: 30 minutes # Set this to 0 to delete instantly
-      # - name: Purge artifacts
-      #   uses: c-hive/gha-remove-artifacts@v1
-      #   with:
-      #     ages: '5 minutes' # '<number> <unit>', e.g. 5 days, 2 years, 90 seconds, parsed by Moment.js
-      #     # Optional inputs
-      #     # skip-tags: true
-      #     # skip-recent: 5
-      # - name: Purge artifacts
-      #   uses: geekyeggo/delete-artifact@v5
-      #   with:
-      #       name: github-pages
