--- a/src/defaults/Gemfile
+++ b/src/defaults/Gemfile
@@ -15,7 +15,7 @@ group :jekyll_plugins do
   # Master Plugins
   gem "jekyll-paginate-v2", "= 3.0.0"
   gem "jekyll-liquify", "= 0.0.2" # ❌ Version 0.0.3 breaks the site
-  gem "jekyll-uj-powertools", "~> 1.0"
+  gem "jekyll-uj-powertools", { ujPowertoolsVersion }
   gem "jekyll-truthyfalsy", "~> 1.0"
 
   # Project Plugins
