--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ultimate-jekyll-manager",
-  "version": "0.0.19",
+  "version": "0.0.23",
   "description": "Ultimate Jekyll dependency manager",
   "main": "dist/index.js",
   "exports": {
@@ -23,9 +23,9 @@
   },
   "projectScripts": {
     "preinstall": "bundle install && bundle update",
-    "start": "npx uj setup && bundle exec npm run gulp --",
+    "start": "npx uj clean && npx uj setup && bundle exec npm run gulp --",
     "gulp": "gulp --cwd ./ --gulpfile ./node_modules/ultimate-jekyll-manager/dist/gulp/main.js",
-    "build": "UJ_BUILD_MODE=true bundle exec npm run gulp -- build"
+    "build": "npx uj clean && npx uj setup && UJ_BUILD_MODE=true bundle exec npm run gulp -- build"
   },
   "engines": {
     "node": "22",
