Fixed languages, working on audit

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-responsive-modern": "^1.0.0",
     "gulp-sass": "^6.0.1",
+    "html-validate": "^9.7.0",
     "itwcw-package-analytics": "^1.0.6",
     "js-yaml": "^4.1.0",
     "json5": "^2.2.3",
@@ -81,6 +82,8 @@
     "node-powertools": "^2.3.1",
     "npm-api": "^1.0.1",
     "sass": "^1.89.0",
+    "simple-spellchecker": "^1.0.2",
+    "spellchecker": "^3.7.1",
     "through2": "^4.0.2",
     "web-manager": "^3.2.73",
     "webpack": "^5.99.8",
