Finalized translations, added audit, refactored

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ultimate-jekyll-manager",
-  "version": "0.0.36",
+  "version": "0.0.37",
   "description": "Ultimate Jekyll dependency manager",
   "main": "dist/index.js",
   "exports": {
@@ -56,18 +56,20 @@
     "sharp": "0.23.1 (sometime before 2021ish): Hard lock because later versions had issues. Possibly solved in higher node versions"
   },
   "dependencies": {
-    "@babel/core": "^7.27.1",
+    "@babel/core": "^7.27.4",
     "@babel/preset-env": "^7.27.2",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@octokit/rest": "^22.0.0",
     "@popperjs/core": "^2.11.8",
+    "@prettier/plugin-xml": "^3.4.1",
     "adm-zip": "^0.5.16",
     "babel-loader": "^10.0.0",
     "browser-sync": "^3.0.4",
     "chalk": "^4.1.2",
     "cheerio": "^1.1.0",
+    "fast-xml-parser": "^5.2.5",
     "fs-jetpack": "^5.1.0",
-    "glob": "^11.0.2",
+    "glob": "^11.0.3",
     "gulp-clean-css": "^4.3.0",
     "gulp-filter": "^9.0.1",
     "gulp-rename": "^2.0.0",
@@ -78,15 +80,15 @@
     "js-yaml": "^4.1.0",
     "json5": "^2.2.3",
     "lodash": "^4.17.21",
-    "minimatch": "^10.0.1",
+    "minimatch": "^10.0.3",
     "node-powertools": "^2.3.1",
     "npm-api": "^1.0.1",
-    "sass": "^1.89.0",
-    "simple-spellchecker": "^1.0.2",
+    "prettier": "^3.5.3",
+    "sass": "^1.89.2",
     "spellchecker": "^3.7.1",
     "through2": "^4.0.2",
     "web-manager": "^3.2.73",
-    "webpack": "^5.99.8",
+    "webpack": "^5.99.9",
     "wonderful-fetch": "^1.3.3",
     "wonderful-version": "^1.3.2",
     "yargs": "^17.7.2"
