--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
     "gulp": "^5.0.1"
   },
   "devDependencies": {
-    "prepare-package": "^1.1.14"
+    "html-minifier-terser": "^7.2.0",
+    "prepare-package": "^1.1.14",
+    "terser": "^5.43.1"
   }
 }
