Created bootstrap theme pages

--- a/src/defaults/src/_config.yml
+++ b/src/defaults/src/_config.yml
@@ -207,8 +207,9 @@ translation:
     - "vi"
     - "it"
 
-# Custom Icons
+# Icons
 icons:
+  style: "solid"
 
 # Blog & Pagination
 permalink: /blog/:title
