--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,18 @@ node_modules/
 
 # Custom
 /dist/
+_backup/
+
+# Icons
+assets/images/flags
+
+assets/images/font-awesome/brands
+assets/images/font-awesome/regular
+assets/images/font-awesome/solid
+
+assets/images/font-awesome/chisel-regular
+assets/images/font-awesome/jelly-fill-regular
+assets/images/font-awesome/jelly-regular
+assets/images/font-awesome/slab-press-regular
+assets/images/font-awesome/slab-regular
+assets/images/font-awesome/whiteboard-semibold
