- Enhanced GitHub cache utility (src/gulp/tasks/utils/github-cache.js)     - Added automatic orphan file detection and cleanup     - Improved branch replacement strategy with temporary branches for safer updates     - Added cache type and description configuration options     - Enhanced README generation with statistics support     - Better file counting and logging during fetch operations     - Metadata file auto-inclusion in cache pushes   - Improved build.js Manager     - Added global task tracking with Maps and Sets for better task management across   instances     - Fixed logger method to work both as static and instance method     - Enhanced triggerRebuild function with proper logger handling   - New imagemin command (src/commands/imagemin.js)     - Added standalone command for forced image optimization     - Integrates with clean command and sets UJ_IMAGEMIN_FORCE environment variable    Gulp Task Improvements    - imagemin.js: Major refactoring for better image optimization workflow   - webpack.js: Enhanced with better error handling and configuration   - sass.js: Improved processing and error handling   - distribute.js: Better distribution workflow   - jekyll.js: Enhanced Jekyll build process   - translation.js: Improved translation handling   - jsonToHtml.js: Better JSON to HTML conversion    Core JavaScript Modules Updates    - chatsy.js: Minor improvements to chat integration   - cookieconsent.js: Enhanced cookie consent functionality   - exit-popup.js: Refactored exit popup behavior   - lazy-loading.js: Improved lazy loading performance   - social-sharing.js: Updated social sharing functionality    Configuration & Defaults    - _config.yml: Updated Jekyll configuration settings   - _.gitignore: Added new ignore patterns   - main.js: Enhanced main JavaScript initialization   - pages/index.js: Improved homepage JavaScript   - service-worker.js: Updated service worker functionality    Other Changes    - clean.js command: Improved cleaning process   - gulp/

--- a/src/defaults/src/_config.yml
+++ b/src/defaults/src/_config.yml
@@ -110,12 +110,22 @@ web_manager:
     enabled: true
     config:
       timeout: 1000 * 60 * 60 * 4
-      handler: null
       title: "Want 15% off?"
       message: "Get 15% off your purchase of our Premium plans."
       okButton:
         text: "Claim 15% Discount"
         link: "/pricing"
+  lazyLoading:
+    enabled: true
+    config:
+      rootMargin: "50px 0px"
+      threshold: 0.01
+  socialSharing:
+    enabled: false
+    config:
+      defaultPlatforms: ["facebook", "twitter", "linkedin", "pinterest", "reddit", "email", "copy"]
+      buttonClass: ""
+      openInNewWindow: true
   pushNotifications:
     enabled: true
     config:
