--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "prepare": "node -e \"require('prepare-package')()\"",
-    "prepare:watch": "nodemon -w ./src -e '*' --exec 'npm run prepare'",
+    "prepare:watch": "node -e \"require('prepare-package/watch')()\"",
     "wm:prod": "npm uninstall web-manager && npm i web-manager@latest",
     "wm:local": "npm uninstall web-manager && npm i ../web-manager"
   },
@@ -58,9 +58,8 @@
     "sharp": "0.23.1 (sometime before 2021ish): Hard lock because later versions had issues. Possibly solved in higher node versions"
   },
   "dependencies": {
-    "@babel/core": "^7.28.0",
-    "@babel/preset-env": "^7.28.0",
-    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@babel/core": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
     "@octokit/rest": "^22.0.0",
     "@popperjs/core": "^2.11.8",
     "@prettier/plugin-xml": "^3.4.2",
@@ -68,7 +67,7 @@
     "babel-loader": "^10.0.0",
     "browser-sync": "^3.0.4",
     "chalk": "^4.1.2",
-    "cheerio": "^1.1.0",
+    "cheerio": "^1.1.2",
     "fast-xml-parser": "^5.2.5",
     "fs-jetpack": "^5.1.0",
     "glob": "^11.0.3",
@@ -77,7 +76,7 @@
     "gulp-rename": "^2.1.0",
     "gulp-responsive-modern": "^1.0.0",
     "gulp-sass": "^6.0.1",
-    "html-validate": "^9.7.1",
+    "html-validate": "^10.0.0",
     "itwcw-package-analytics": "^1.0.6",
     "js-yaml": "^4.1.0",
     "json5": "^2.2.3",
@@ -86,11 +85,11 @@
     "node-powertools": "^2.3.1",
     "npm-api": "^1.0.1",
     "prettier": "^3.6.2",
-    "sass": "^1.89.2",
+    "sass": "^1.91.0",
     "spellchecker": "^3.7.1",
     "through2": "^4.0.2",
     "web-manager": "file:../web-manager",
-    "webpack": "^5.100.2",
+    "webpack": "^5.101.3",
     "wonderful-fetch": "^1.3.3",
     "wonderful-version": "^1.3.2",
     "yargs": "^17.7.2"
@@ -100,7 +99,7 @@
   },
   "devDependencies": {
     "html-minifier-terser": "^7.2.0",
-    "prepare-package": "^1.1.14",
+    "prepare-package": "^1.2.2",
     "terser": "^5.43.1"
   }
 }
