Remove Bootstrap theme and cart functionality, add Classy theme   foundation    - Remove entire Bootstrap theme structure (layouts, includes, pages)   - Delete cart/checkout payment functionality   - Add new Classy theme directory structure   - Update core head/foot includes with simplified structure   - Enhance gulp tasks (sass, webpack, imagemin) with better error handling   - Update team member markdown files   - Clean up configuration and build dependencies    This represents a major refactoring to transition from Bootstrap to a new    Classy theme architecture while streamlining the payment flow and   improving build processes.
  Remove Bootstrap theme and cart functionality, add Classy theme
  foundation

  - Remove entire Bootstrap theme structure (layouts, includes, pages)
  - Delete cart/checkout payment functionality
  - Add new Classy theme directory structure
  - Update core head/foot includes with simplified structure
  - Enhance gulp tasks (sass, webpack, imagemin) with better error handling
  - Update team member markdown files
  - Clean up configuration and build dependencies

  This represents a major refactoring to transition from Bootstrap to a new
   Classy theme architecture while streamlining the payment flow and
  improving build processes.

--- a/src/defaults/src/_config.yml
+++ b/src/defaults/src/_config.yml
@@ -26,7 +26,7 @@ theme:
 meta:
   title: ""
   description: ""
-  og-image: "https://cdn.itwcreativeworks.com/assets/itw-creative-works/images/socials/itw-creative-works-brandmark-square-black-1024x1024.png"
+  image: "https://cdn.itwcreativeworks.com/assets/itw-creative-works/images/socials/itw-creative-works-brandmark-square-black-1024x1024.png"
   keywords: ""
   viewport: ""
   index: true
