new audit system

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "browser-sync": "^3.0.4",
     "chalk": "^4.1.2",
     "cheerio": "^1.1.2",
+    "chrome-launcher": "^1.1.2",
     "fast-xml-parser": "^5.2.5",
     "fs-jetpack": "^5.1.0",
     "glob": "^11.0.3",
@@ -80,6 +81,7 @@
     "itwcw-package-analytics": "^1.0.6",
     "js-yaml": "^4.1.0",
     "json5": "^2.2.3",
+    "lighthouse": "^12.2.1",
     "lodash": "^4.17.21",
     "minimatch": "^10.0.3",
     "node-powertools": "^2.3.1",
