--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ultimate-jekyll-manager",
-  "version": "0.0.47",
+  "version": "0.0.55",
   "description": "Ultimate Jekyll dependency manager",
   "main": "dist/index.js",
   "exports": {
@@ -58,8 +58,9 @@
     "sharp": "0.23.1 (sometime before 2021ish): Hard lock because later versions had issues. Possibly solved in higher node versions"
   },
   "dependencies": {
-    "@babel/core": "^7.28.3",
+    "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
+    "@fullhuman/postcss-purgecss": "^7.0.2",
     "@octokit/rest": "^22.0.0",
     "@popperjs/core": "^2.11.8",
     "@prettier/plugin-xml": "^3.4.2",
@@ -74,9 +75,11 @@
     "glob": "^11.0.3",
     "gulp-clean-css": "^4.3.0",
     "gulp-filter": "^9.0.1",
+    "gulp-postcss": "^10.0.0",
     "gulp-rename": "^2.1.0",
     "gulp-responsive-modern": "^1.0.0",
     "gulp-sass": "^6.0.1",
+    "html-minifier-terser": "^7.2.0",
     "html-validate": "^10.0.0",
     "itwcw-package-analytics": "^1.0.6",
     "js-yaml": "^4.1.0",
@@ -86,11 +89,12 @@
     "minimatch": "^10.0.3",
     "node-powertools": "^2.3.1",
     "npm-api": "^1.0.1",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "sass": "^1.91.0",
+    "sass": "^1.92.1",
     "spellchecker": "^3.7.1",
     "through2": "^4.0.2",
-    "web-manager": "file:../web-manager",
+    "web-manager": "^4.0.0",
     "webpack": "^5.101.3",
     "wonderful-fetch": "^1.3.3",
     "wonderful-version": "^1.3.2",
@@ -100,8 +104,6 @@
     "gulp": "^5.0.1"
   },
   "devDependencies": {
-    "html-minifier-terser": "^7.2.0",
-    "prepare-package": "^1.2.2",
-    "terser": "^5.43.1"
+    "prepare-package": "^1.2.2"
   }
 }
