--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ultimate-jekyll-manager",
-  "version": "0.0.61",
+  "version": "0.0.62",
   "description": "Ultimate Jekyll dependency manager",
   "main": "dist/index.js",
   "exports": {
@@ -94,7 +94,7 @@
     "sass": "^1.93.2",
     "spellchecker": "^3.7.1",
     "through2": "^4.0.2",
-    "web-manager": "file:../web-manager",
+    "web-manager": "^4.0.2",
     "webpack": "^5.101.3",
     "wonderful-fetch": "^1.3.3",
     "wonderful-version": "^1.3.2",
