Implement backend dashboard layout system with sidebar navigation and data-driven components
This commit introduces a complete backend dashboard infrastructure for the Ultimate Jekyll template system, replacing the frontend-focused navigation with a proper admin dashboard layout. Major architectural changes:
Created a new backend layout hierarchy with sidebar + topbar navigation pattern
Moved logo section from topbar back into sidebar for traditional dashboard structure
Restructured base layout to position sidebar at full height with content area to the right
Implemented proper variable inheritance using page.resolved for all data references
Backend components created/modified:
backend/core/base.html: Base layout with sidebar-first structure
backend/core/minimal.html: Page template with configurable header, breadcrumbs, and actions
backend/sections/sidebar.html: Collapsible sidebar with Bootstrap-style navigation and mobile offcanvas support
backend/sections/topbar.html: Simplified topbar with user menu and search functionality
backend/pages/dashboard/index.html: Dashboard layout with data-driven components
Dashboard features:
Stats cards with configurable metrics, icons, and change indicators
Recent activity feed with timeline-style layout
Quick actions panel with button grid
Progress overview with visual progress bars
All components driven by frontmatter configuration for easy customization
Styling improvements:
Fixed sidebar and topbar height consistency (60px)
Implemented proper dark mode support for navigation elements
Added hover and active states for sidebar menu items
Responsive mobile navigation with offcanvas sidebar
Technical enhancements:
Updated jsonToHtml gulp task to parse JSON5 syntax and convert to regular JSON
Moved all page configuration into theme.header namespace for better organization
Ensured all data access uses page.resolved for proper variable inheritance
Created loop-based templates eliminating hardcoded HTML for maintainability
This provi

--- a/src/defaults/src/_config.yml
+++ b/src/defaults/src/_config.yml
@@ -64,6 +64,7 @@ web_manager:
       redirects:
         authenticated: "/account"
         unauthenticated: "/signup"
+      allowSubdomains: true
   firebase:
     app:
       enabled: true
