--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,6 @@ assets/images/font-awesome/jelly-regular
 assets/images/font-awesome/slab-press-regular
 assets/images/font-awesome/slab-regular
 assets/images/font-awesome/whiteboard-semibold
+
+# MCP
+.playwright-mcp
