--- a/src/config/_config_default.yml
+++ b/src/config/_config_default.yml
@@ -52,9 +52,9 @@ markdown: kramdown
 strict_front_matter: true
 plugins:
   - jekyll-paginate-v2
-  - jekyll-liquify
+  # - jekyll-liquify
   - jekyll-uj-powertools
-  - jekyll-truthyfalsy
+  # - jekyll-truthyfalsy
 
 # Exclude from processing
 exclude:
