--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ultimate-jekyll-manager",
-  "version": "0.0.121",
+  "version": "0.0.126",
   "description": "Ultimate Jekyll dependency manager",
   "main": "dist/index.js",
   "exports": {
@@ -57,7 +57,7 @@
   "noteDeps": {
     "browser-sync": "2.23.7 (6-22-2023): Hard lock because every version after uses socket.io@4.7.0 which uses engine.io@6.5.0 which is incompatible with node 10.15.1 due to TextDecoder() in build process",
     "sharp": "0.23.1 (sometime before 2021ish): Hard lock because later versions had issues. Possibly solved in higher node versions",
-    "@sentry/core (override)": "Must match the major version used by @sentry/browser in web-manager. Lighthouse uses @sentry/node@9.x which causes hoisting conflicts."
+    "lighthouse": "Removed from deps to avoid @sentry/core version conflicts with web-manager. Install globally: npm i -g lighthouse"
   },
   "dependencies": {
     "@babel/core": "^7.28.5",
@@ -88,7 +88,6 @@
     "js-yaml": "^3.14.2",
     "json5": "^2.2.3",
     "libsodium-wrappers": "^0.7.15",
-    "lighthouse": "^12.2.1",
     "lodash": "^4.17.21",
     "minimatch": "^10.1.1",
     "node-powertools": "^2.3.2",
@@ -98,7 +97,7 @@
     "sass": "^1.94.2",
     "spellchecker": "^3.7.1",
     "through2": "^4.0.2",
-    "web-manager": "^4.0.29",
+    "web-manager": "^4.0.30",
     "webpack": "^5.103.0",
     "wonderful-fetch": "^1.3.4",
     "wonderful-version": "^1.3.2",
@@ -109,8 +108,5 @@
   },
   "devDependencies": {
     "prepare-package": "^1.2.5"
-  },
-  "overrides": {
-    "@sentry/core": ">=10.0.0"
   }
 }
