Refactor core CSS to SCSS partials, update team members, and bump dependencies
Major refactor of core CSS architecture:
- Renamed core CSS files from standalone .scss to underscore-prefixed partials (_alert.scss, _animations.scss, etc.) to properly integrate with SCSS import system
- Added new _bindings.scss partial for CSS bindings

Updated default team members:
- Replaced placeholder team members (alex, ian) with diverse demo team
- Added 8 new team member profiles with proper naming convention (alex-raeburn, alfred-caufy, ian-wiedenman, james-oconnor, marcus-johnson, priya-sharma, rare-ivy, sarah-rodriguez)
- Added corresponding profile images for each team member

Documentation improvements:
- Added HTML element attributes table to both CLAUDE.md and README.md documenting data attributes available on <html> element

Dependency updates:
- Bumped web-manager from 4.0.30 to 4.0.31
- Updated @sentry packages to 10.28.0
- Version bump to 0.0.132

Various JS improvements across core modules and page scripts (exit-popup, lazy-loading, social-sharing, cookieconsent, form-manager, etc.)

--- a/src/config/_config_default.yml
+++ b/src/config/_config_default.yml
@@ -1,7 +1,7 @@
 # Ultimate Jekyll Properties
 uj:
   cache_breaker: null
-  environment: "production"
+  # environment: "production" # DEPRECATED: use jekyll.environment instead
 
 # Theme
 theme:
