--- a/src/defaults/src/_config.yml
+++ b/src/defaults/src/_config.yml
@@ -244,6 +244,9 @@ collections:
   team:
     title: Team Members
     output: true
+  updates:
+    title: Updates
+    output: true
 
 # Jekyll defaults
 defaults:
@@ -252,3 +255,8 @@ defaults:
     type: team
   values:
     permalink: /team/:title
+- scope:
+    path: ""
+    type: updates
+  values:
+    permalink: /updates/:title
