Add token auth system

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ultimate-jekyll-manager",
-  "version": "0.0.163",
+  "version": "0.0.167",
   "description": "Ultimate Jekyll dependency manager",
   "main": "dist/index.js",
   "exports": {
@@ -53,7 +53,7 @@
   "bugs": {
     "url": "https://github.com/itw-creative-works/ultimate-jekyll/issues"
   },
-  "homepage": "https://template.itwcreativeworks.com",
+  "homepage": "https://ultimate-jekyll.itwcreativeworks.com",
   "noteDeps": {
     "browser-sync": "2.23.7 (6-22-2023): Hard lock because every version after uses socket.io@4.7.0 which uses engine.io@6.5.0 which is incompatible with node 10.15.1 due to TextDecoder() in build process",
     "sharp": "0.23.1 (sometime before 2021ish): Hard lock because later versions had issues. Possibly solved in higher node versions",
