New browser icons, reworked download and ext page, fixed authorized fetch, auto scroll to focused field in FM, upaded components fo use class inst of color,
New browser icons, reworked download and ext page, fixed authorized fetch, auto scroll to focused field in FM, upaded components fo use class inst of color,

--- a/src/defaults/_.env
+++ b/src/defaults/_.env
@@ -1,5 +1,7 @@
 # ========== Default Values ==========
-# ...
+# Github Token
+# Get token at: https://github.com/settings/tokens
+GH_TOKEN=""
 
 # ========== Custom Values ==========
 # Add your custom environment variables below this line
