--- a/src/defaults/src/_config.yml
+++ b/src/defaults/src/_config.yml
@@ -124,7 +124,7 @@ web_manager:
   socialSharing:
     enabled: false
     config:
-      defaultPlatforms: ["facebook", "twitter", "linkedin", "pinterest", "reddit", "email", "copy"]
+      defaultPlatforms: [ "facebook", "twitter", "linkedin", "pinterest", "reddit", "email", "copy" ]
       buttonClass: ""
       openInNewWindow: true
   pushNotifications:
@@ -229,35 +229,35 @@ icons:
   style: "solid"
 
 # Blog & Pagination
-permalink: /blog/:title
+permalink: "/blog/:title"
 pagination:
   enabled: true
   per_page: 6
   offset: 0
   limit: 0
-  permalink: /page/:num.html
-  title: :title - page :num
-  sort_field: date
+  permalink: "/page/:num.html"
+  title: ":title - page :num"
+  sort_field: "date"
   sort_reverse: true
 
 # Jekyll collections
 collections:
   team:
-    title: Team Members
+    title: "Team Members"
     output: true
   updates:
-    title: Updates
+    title: "Updates"
     output: true
 
 # Jekyll defaults
 defaults:
   - scope:
       path: ""
-      type: team
+      type: "team"
     values:
-      permalink: /team/:title
+      permalink: "/team/:title"
   - scope:
       path: ""
-      type: updates
+      type: "updates"
     values:
-      permalink: /updates/:title
+      permalink: "/updates/:title"
