Refactor theme system with bootstrap overrides and classy fallbacks
Major theme system improvements:

1. Bootstrap Overrides System
   - Move shared utility styles from classy theme to bootstrap/overrides/
   - New override files: avatars, buttons-adaptive, soft-colors, spacing-extended,
     typography-utilities, links, spinners, cursor-utilities, accordion, blog-images
   - Allows all themes to inherit common Bootstrap extensions

2. Classy Theme Fallbacks
   - Add automatic fallback system in distribute.js that copies missing theme
     files from classy to the current theme
   - Themes no longer need to duplicate all layouts/includes from classy
   - Template variables are transformed to use the current theme

3. Status Page Build Info Section
   - Add "Build Information" section showing last build time, environment,
     package versions, and repository
   - Live-updating relative time display (e.g., "7d 0h 0m 15s ago")
   - Fetches data from /build.json

4. SCSS Build Improvements
   - Refactor sass.js for better PurgeCSS handling
   - Add through2 for stream processing

5. Various JS Improvements
   - Enhanced exit-popup.js with better UX
   - Improved lazy-loading.js with additional features
   - Minor fixes to cookie consent, social sharing, and page modules

--- a/src/config/_config_default.yml
+++ b/src/config/_config_default.yml
@@ -56,6 +56,12 @@ plugins:
   - jekyll-uj-powertools
   # - jekyll-truthyfalsy
 
+# Parallel
+parallel_build:
+  enabled: true          # Enable/disable parallel builds (default: true)
+  threads: 8             # Number of threads (default: number of CPU cores)
+  min_items: 1          # Minimum items before parallelizing (default: 10)
+
 # Exclude from processing
 exclude:
   - Gemfile
