--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ultimate-jekyll-manager",
-  "version": "0.0.212",
+  "version": "0.0.213",
   "description": "Ultimate Jekyll dependency manager",
   "main": "dist/index.js",
   "exports": {
@@ -27,7 +27,8 @@
   "projectScripts": {
     "start": "npx uj clean && npx uj setup && bundle exec npm run gulp --",
     "gulp": "gulp --cwd ./ --gulpfile ./node_modules/ultimate-jekyll-manager/dist/gulp/main.js",
-    "build": "npx uj clean && npx uj setup && UJ_BUILD_MODE=true bundle exec npm run gulp -- build"
+    "build": "npx uj clean && npx uj setup && UJ_BUILD_MODE=true bundle exec npm run gulp -- build",
+    "deploy": "npm run build && npu sync --message='Deploy'"
   },
   "engines": {
     "node": "22",
