--- a/src/config/_config_default.yml
+++ b/src/config/_config_default.yml
@@ -85,3 +85,25 @@ exclude:
 include:
   - .well-known
   - __
+
+# Jekyll collections
+collections:
+  team:
+    title: "Team Members"
+    output: true
+  updates:
+    title: "Updates"
+    output: true
+
+# Jekyll defaults
+defaults:
+  - scope:
+      path: ""
+      type: "team"
+    values:
+      permalink: "/team/:title"
+  - scope:
+      path: ""
+      type: "updates"
+    values:
+      permalink: "/updates/:title"
